--- a/css/main.css
+++ b/css/main.css
@@ -25,34 +25,6 @@ html,body{
 	padding-right: 0px !important; 
 }
 
-.va-fix2{
-	/*center vertical*/
-	position: relative;
-  	top: 35%;
-  	transform: translateY(-35%);
-  	-webkit-transform: translateY(-35%);
- 	-ms-transform: translateY(-35%); 
-}
-
-.va-fix{
-	/*center vertical*/
-	position: relative;
-  	top: 40%;
-  	transform: translateY(-45%);
-  	-webkit-transform: translateY(-45%);
- 	-ms-transform: translateY(-45%); 
-}
-
-.va{
-	/*center vertical*/
-	position: relative;
-  	top: 50%;
-  	transform: translateY(-50%);
-  	-webkit-transform: translateY(-50%);
- 	-ms-transform: translateY(-50%); 
-}
-
-
 .hidden{
      opacity:0;
 }
@@ -60,227 +32,124 @@ html,body{
      opacity:1;
      transition: all ease 2seg;
 }
+/*
+ ██████╗ ██████╗ ███╗   ██╗████████╗ █████╗  ██████╗████████╗    
+██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝██╔══██╗██╔════╝╚══██╔══╝    
+██║     ██║   ██║██╔██╗ ██║   ██║   ███████║██║        ██║       
+██║     ██║   ██║██║╚██╗██║   ██║   ██╔══██║██║        ██║       
+╚██████╗╚██████╔╝██║ ╚████║   ██║   ██║  ██║╚██████╗   ██║       
+ ╚═════╝ ╚═════╝ ╚═╝  ╚═══╝   ╚═╝   ╚═╝  ╚═╝ ╚═════╝   ╚═╝       
+*/
 
+	.send-btn-free:hover{
 
-.ytp-title-text{
-	display: none !important; 
-}
+	  border: 0;
+	  padding: 0;
+	  height: 50px; 
+	  background-color: #E3E3E3;
+	  color: #8EBC2A;
+	  font-weight: 700;
+	  transition: all 0.4s ease; 
+	}
 
-/*Modal*/
+	.send-btn-free{
 
-.modal-pillow{
-	  border-radius: 0px !important;
-	  height: 350px; 
-	  padding: 5%; 
-	  background-color: rgba(255,255,255,0.8) !important;
-}
+	  border: 0;
+	  padding: 0;
+	  height: 50px; 
+	  background-color: #8EBC2A;
+	  color: #fff; 
+	  text-transform: uppercase;
+	  letter-spacing: 1px;
+	}
 
-.send-btn-free:hover{
+	.inputGroup2 {
+	  position: relative;
+	  margin-bottom: 30px;
+	}
 
-  border: 0;
-  padding: 0;
-  height: 50px; 
-  background-color: #E3E3E3;
-  color: #8EBC2A;
-  font-weight: 700;
-  transition: all 0.4s ease; 
-}
+	.inputGroup2 label {
+	  position: absolute;
+	  top: 0;
+	  left: 5px;
+	  pointer-events: none;
+	  transition: all 0.3s ease;
+	  font-size: 16px;
+	  color: #333;
+	  font-weight: 500;
+	  font-family: 'Raleway', sans-serif;
 
-.send-btn-free{
+	}
 
-  border: 0;
-  padding: 0;
-  height: 50px; 
-  background-color: #8EBC2A;
-  color: #fff; 
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
+	.inputGroup2 input,
+	.inputGroup2 textarea {
+	  display: block;
+	  width: 100%;
+	  border: none;
+	  border-bottom: 1px solid #757575;
+	  left: 25px;
+	  padding: 5px;
+	  background: none;
+	  color: #333;
+	}
 
-.send-btn-con{
+	.inputGroup2 input:focus ~ label,
+	.inputGroup2 input:valid ~ label,
+	.inputGroup2 textarea:focus ~ label,
+	.inputGroup2 textarea:valid ~ label {
+	  top: -20px;
+	  transition: all 0.3s ease;
+	  font-size: 13px;
+	}
 
-  border: 0;
-  padding: 0;
-  height: 50px; 
-  border:solid 1px white;
-  background-color: white;
-  color: #8EBC2A; 
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  margin-top: 5px;
-}
+	.inputGroup2 input:focus ~ .inputBar:before,
+	.inputGroup2 input:focus ~ .inputBar:after,
+	.inputGroup2 textarea:focus ~ .inputBar:before,
+	.inputGroup2 textarea:focus ~ .inputBar:after {
+	  width: 50%;
+	}
 
+	.inputGroup2 textarea {
+	  height: 100px;
+	  width: 100%; 
+	  overflow: auto;
+	  resize: none;
+	}
 
-.inputGroup2 {
-  position: relative;
-  margin-bottom: 30px;
-}
+	.inputGroup2 .inputBar {
+	  position: relative;
+	  display: block;
+	  width: 100%;
+	}
 
-.inputGroup2 label {
-  position: absolute;
-  top: 0;
-  left: 5px;
-  pointer-events: none;
-  transition: all 0.3s ease;
-  font-size: 16px;
-  color: #333;
-  font-weight: 500;
-  font-family: 'Raleway', sans-serif;
+	.inputGroup2 .inputBar:before,
+	.inputGroup2 .inputBar:after {
+	  content: "";
+	  display: block;
+	  position: absolute;
+	  bottom: 0;
+	  width: 0;
+	  background: #333;
+	  height: 4px;
+	  transition: all 0.2s ease;
+	}
 
-}
+	.inputGroup2 .inputBar:after {
+	  right: 50%;
+	}
 
-.inputGroup2 input,
-.inputGroup2 textarea {
-  display: block;
-  width: 100%;
-  border: none;
-  border-bottom: 1px solid #757575;
-  left: 25px;
-  padding: 5px;
-  background: none;
-  color: #333;
-}
-
-.inputGroup2 input:focus ~ label,
-.inputGroup2 input:valid ~ label,
-.inputGroup2 textarea:focus ~ label,
-.inputGroup2 textarea:valid ~ label {
-  top: -20px;
-  transition: all 0.3s ease;
-  font-size: 13px;
-}
-
-.inputGroup2 input:focus ~ .inputBar:before,
-.inputGroup2 input:focus ~ .inputBar:after,
-.inputGroup2 textarea:focus ~ .inputBar:before,
-.inputGroup2 textarea:focus ~ .inputBar:after {
-  width: 50%;
-}
-
-.inputGroup2 textarea {
-  height: 100px;
-  width: 100%; 
-  overflow: auto;
-  resize: none;
-}
-
-.inputGroup2 .inputBar {
-  position: relative;
-  display: block;
-  width: 100%;
-}
-
-.inputGroup2 .inputBar:before,
-.inputGroup2 .inputBar:after {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: 0;
-  width: 0;
-  background: #333;
-  height: 4px;
-  transition: all 0.2s ease;
-}
-
-.inputGroup2 .inputBar:after {
-  right: 50%;
-}
-
-.inputGroup2 .inputBar:before {
-  left: 50%;
-}
+	.inputGroup2 .inputBar:before {
+	  left: 50%;
+	}
 
 /*
-
-█▀▄▀█ █▀▀ █▀▀▄ █░░█ 
-█░▀░█ █▀▀ █░░█ █░░█ 
-▀░░░▀ ▀▀▀ ▀░░▀ ░▀▀▀ 
-
-off-canvas
+███╗   ███╗███████╗███╗   ██╗██╗   ██╗
+████╗ ████║██╔════╝████╗  ██║██║   ██║
+██╔████╔██║█████╗  ██╔██╗ ██║██║   ██║
+██║╚██╔╝██║██╔══╝  ██║╚██╗██║██║   ██║
+██║ ╚═╝ ██║███████╗██║ ╚████║╚██████╔╝
+╚═╝     ╚═╝╚══════╝╚═╝  ╚═══╝ ╚═════╝ 
 */
-	#menu-smart li a:hover,
-	#menu-smart li a:active,
-	#menu-smart li a:focus
-	{
-		opacity: 1;
-		color: #8EBC2A ;
-		text-decoration: none;
-	}
-
-
-
-	.home-lg-nav{
-		display: block !important;  
-		padding: 3% 0%; 
-		transition: all 0.8s ease-in-out;
-		z-index: 99999 !important;
-	}
-
-	.home-lg-nav:hover{
-		background-color: rgba(0,0,0,0.15);
-
-
-	}
-
-
-	#menu-pillow-home {
-
-	   clear:left;
-	   float:left;
-	   list-style:none;
-	   margin:0;
-	   padding:0;
-	   position:relative;
-	   left:50%;
-	   text-align:center;
-	   margin-top: 2%; 
-
-	}
-
-
-
-	#menu-pillow-home li {
-		float: left;
-		display: block;
-		text-align: center;
-		position: relative;
-		padding: 0px 10px 4px 10px;
-		/* margin-right: 30px; */
-		/* margin-top: 7px; */
-		border: none;
-		text-transform: uppercase;
-		font-family: 'Raleway', sans-serif;
-		color: #fff !important; 
-
-		display:block;
-	   float:left;
-	   list-style:none;
-	   margin:0;
-	   padding:0;
-	   position:relative;
-	   right:50%;
-
-	}
-
-	#menu-pillow-home li a{
-		color: #ffffff;
-		font-weight: 700; 
-		letter-spacing: 2px;
-		font-size: 0.9em; 
-		padding: 0px 20px;
-		transition: all 0.4s ease-in-out;
-	}
-	#menu-pillow-home li a:hover,
-	#menu-pillow-home li a:active,
-	#menu-pillow-home li a:focus
-	{
-		opacity: 1;
-		color: #FF1B81 ;
-		text-decoration: none;
-	}
-
-
-
 	.social-div-smart{
 		  height: 80px;
 		width: 60px; 	
@@ -311,64 +180,6 @@ off-canvas
 		  	-webkit-transform: translateY(-50%);
 		 	-ms-transform: translateY(-50%);
 	}
-
-	.social-div-pillow2{
-		height: 60px;
-	
-		color: #E5E5E5;  
-		text-align: center;
-		font-size: 1.3em; 
-		padding: 15px 0%;
-		border-left: solid 1px #333333;   
-		transition: all 0.4s ease-in-out;
-	}
-	.social-div-pillow2:hover{
-		height: 60px;
-	 	
-		color: #FFf;  
-		text-align: center;
-		font-size: 1.3em; 
-		padding: 15px 0%;
-		border-left: solid 10px #FF1B81;   
-		transition: all 0.4s ease-in-out;
-	}
-
-	.social-div-pillow2 p{
-		  color: #ffffff;
-		  font-weight: 700;
-		  letter-spacing: 2px;
-		  font-size: 0.7em;
-		  opacity: 0.5;
-		  padding: 0px 10px;
-		  text-transform: uppercase;
-		  transition: all 0.4s ease-in-out;
-
-
-		  	/*center vertical*/
-		  	position: relative;
-		    	top: 50%;
-		    	transform: translateY(-50%);
-		    	-webkit-transform: translateY(-50%);
-		   	-ms-transform: translateY(-50%);
-	}
-
-	.social-div-pillow2:hover p{
-		  color: #FF1B81;
-		  opacity: 1; 
-		  
-	}
-
-	.social-pillow{
-		text-align: left;
-	}
-	.logo-cliente{
-		width: 80%; 
-	}
-	.cliente-cube{
-	  padding: 3% 3% !important;
-	}
-
-
 
 	/*MEnu drop*/
 
@@ -425,10 +236,7 @@ off-canvas
 	}
 
 	.menu-list a:hover{
-		
 	  text-decoration: none; 
-	  
-
 	}
 
 	.menu-list a span p {
@@ -460,195 +268,6 @@ off-canvas
 
 	.menu-list a span p {
 		color: #fff; 
-	}
-	/*Articles*/
-	
-	.post-module .thumbnail2 {
-  		height: 240px;
-	}
-
-	/*
-	Footer :) 
-	*/
-
-	.social-div{
-		margin-right: 10px; 
-	}
-
-
-
-
-	.logo-footer{
-		width: 10%; 
-	}
-	.social-div{
-		height: 46px;
-	}
-
-
-
-	/*blog page*/
-
-	.img-banner-para {
-
-  		margin-top: -5%;
-  		  width: 126%;
-	}
-
-	.img-banner-para-contact {
-
-  		margin-top: -5%;
-  		 height: 126%;
-	}
-
-
-	.article-image{
-		height: 250px; 
-	}
-
-	.article-image2{
-	height: 230px; 
-	}
-
-
-	#banner-para{
-
-  	height: 100%;
-
-	}
-
-
-	.logo-para{
-	  width: 23%;
-	}
-
-	#intro-para h4{
-	margin-top: -4%; 
-	}
-
-	/*talk*/
-
-	.ver-mas-btn2{
-			height: 200px; 
-			background-color: #EAEAEA;
-			padding: 10% !important; 
-			margin-top: 0%; 
-			margin-bottom: 0%;
-			
-		}
-
-	.ver-mas-btn2 h3{
-		font-size: 1.4em !important; 
-		
-	}
-
-	.contact{
-		  height: 460px;
-	}
-
-	.c1-contact, .c2-contact{
-		height: 100%;
-	}
-
-	.c2-contact {
-	  padding: 5% 0% !important;
-	}
-
-	/* post*/
-
-	.cover-post{
-		height: 600px;
-	}
-
-	/* free*/
-
-	.free-card{
-		  padding: 9% !important;
-
-	}
-	.logo-menu-mobile{
-		margin-bottom: 2%;
-		width: 45%;
-	}
-	.social-bar{
-	  height: 100%;
-	  
-	  position: absolute;
-	  right: 0px;
-	  bottom: 0px;
-	  width: 50px;
-	  padding: 45% 0%;
-	}
-
-	.social-div-mobile-linkedin{
-	  float:left;
-	  height: 49px;
-	  color: #fff;
-	  background-color:#0274B4; 
-	  text-align: center;
-	  font-size: 1.3em;
-	  /* padding: 22% 0%; */
-	  
-	  margin: 0% 2%; 
-	  width: 49px;
-
-	}
-
-	.social-div-mobile-linkedin i{
-		position: relative;
-	top: 50%;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-
-	}
-
-	.social-div-mobile-plus{
-	  float:left;
-	  height: 49px;
-	  color: #fff;
-	  background-color:#DD4B39; 
-	  text-align: center;
-	  font-size: 1.3em;
-	  /* padding: 22% 0%; */
-	  
-	    margin: 0% 2%; 
-	  width: 49px;
-
-	}
-
-	.social-div-mobile-plus i{
-		position: relative;
-	top: 50%;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-
-	}
-
-
-
-	.social-div-mobile-face{
-	  float:left;
-	  height: 49px;
-	  color: #fff;
-	  background-color:#3A5899; 
-	  text-align: center;
-	  font-size: 1.3em;
-	  /* padding: 22% 0%; */
-
-	  margin: 0% 2%; 
-	  width: 49px;
-
-	}
-
-	.social-div-mobile-face i{
-		position: relative;
-	top: 50%;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-
 	}
 
 	.social-row{
@@ -705,7 +324,6 @@ off-canvas
 		transform: translate3d(0px,0,0);
 		
 	}
-
 
 	/* Close Button */
 	.close-button {
@@ -829,8 +447,6 @@ off-canvas
 	  text-transform: none;
 	  font-family: 'Montserrat', sans-serif;
 	  color: #555;
-	  
-
 	}
 
 	.icon-list a:hover{
@@ -944,10 +560,7 @@ off-canvas
 
 
 	.arrow-down-para:focus {
-
-
-	outline: none;
-
+		outline: none;
 	}
 
 
@@ -975,15 +588,12 @@ off-canvas
 
 	}
 
-
 	.nav-toggle span:before {
 	  top: 2px;
 	  right: -2px;
 	  transform-origin: 0%;
 	  transform: rotate(-90deg);
-
 	}
-
 
 	.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
 	  transition: all 300ms ease-in-out;
@@ -996,8 +606,6 @@ off-canvas
 	.nav-toggle.active span:before, .nav-toggle.active span:after {
 	  top: 0;
 	}
-
-
 
 	.nav-toggle.active span:before {
 	  transform: rotate(-90deg);
@@ -1013,16 +621,93 @@ off-canvas
 		 
 	}
 
+/*
+███╗   ███╗███████╗███╗   ██╗██╗   ██╗    ███╗   ███╗ ██████╗ ██████╗ ██╗██╗     ███████╗
+████╗ ████║██╔════╝████╗  ██║██║   ██║    ████╗ ████║██╔═══██╗██╔══██╗██║██║     ██╔════╝
+██╔████╔██║█████╗  ██╔██╗ ██║██║   ██║    ██╔████╔██║██║   ██║██████╔╝██║██║     █████╗  
+██║╚██╔╝██║██╔══╝  ██║╚██╗██║██║   ██║    ██║╚██╔╝██║██║   ██║██╔══██╗██║██║     ██╔══╝  
+██║ ╚═╝ ██║███████╗██║ ╚████║╚██████╔╝    ██║ ╚═╝ ██║╚██████╔╝██████╔╝██║███████╗███████╗
+╚═╝     ╚═╝╚══════╝╚═╝  ╚═══╝ ╚═════╝     ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚═╝╚══════╝╚══════╝
+*/	
+	.social-div-mobile-linkedin{
+	  float:left;
+	  height: 49px;
+	  color: #fff;
+	  background-color:#0274B4; 
+	  text-align: center;
+	  font-size: 1.3em;
+	  /* padding: 22% 0%; */
+	  
+	  margin: 0% 2%; 
+	  width: 49px;
+
+	}
+
+	.social-div-mobile-linkedin i{
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+
+	}
+
+	.social-div-mobile-plus{
+	  float:left;
+	  height: 49px;
+	  color: #fff;
+	  background-color:#DD4B39; 
+	  text-align: center;
+	  font-size: 1.3em;
+	  /* padding: 22% 0%; */
+	  
+	    margin: 0% 2%; 
+	  width: 49px;
+
+	}
+
+	.social-div-mobile-plus i{
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+
+	}
 
 
 
-	/*
+	.social-div-mobile-face{
+	  float:left;
+	  height: 49px;
+	  color: #fff;
+	  background-color:#3A5899; 
+	  text-align: center;
+	  font-size: 1.3em;
+	  /* padding: 22% 0%; */
 
-	█░░█ █▀▀█ █▀▄▀█ █▀▀ 
-	█▀▀█ █░░█ █░▀░█ █▀▀ 
-	▀░░▀ ▀▀▀▀ ▀░░░▀ ▀▀▀
+	  margin: 0% 2%; 
+	  width: 49px;
 
-	*/
+	}
+
+	.social-div-mobile-face i{
+		position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+
+	}
+
+/*
+██╗  ██╗ ██████╗ ███╗   ███╗███████╗
+██║  ██║██╔═══██╗████╗ ████║██╔════╝
+███████║██║   ██║██╔████╔██║█████╗  
+██╔══██║██║   ██║██║╚██╔╝██║██╔══╝  
+██║  ██║╚██████╔╝██║ ╚═╝ ██║███████╗
+╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚══════╝
+*/
 	#h-screen{
 		height: 580px;
 		background-image: url('https://dqoefujyy8ep3.cloudfront.net/Img/home/back-home.jpg'); 
@@ -1730,9 +1415,6 @@ off-canvas
 		font-size: 3em; 
 	}
 
-
-
-
 	.ver-mas-btn2{
 		height: 150px; 
 		background-color: #EAEAEA;
@@ -1791,11 +1473,13 @@ off-canvas
 		width: 100%;
 	}
 
-
 /*
-▒█▀▄▀█ ▒█▀▀█ ▒█░▒█ ▒█▀▀▀ ▒█▀▀█ ▀█▀ ▒█▀▀▀ ▒█▀▀▀█ 
-▒█▒█▒█ ▒█░▒█ ▒█░▒█ ▒█▀▀▀ ▒█▄▄▀ ▒█░ ▒█▀▀▀ ░▀▀▀▄▄ 
-▒█░░▒█ ░▀▀█▄ ░▀▄▄▀ ▒█▄▄▄ ▒█░▒█ ▄█▄ ▒█▄▄▄ ▒█▄▄▄█ 
+███╗   ███╗       ██████╗ ██╗   ██╗███████╗██████╗ ██╗███████╗███████╗
+████╗ ████║      ██╔═══██╗██║   ██║██╔════╝██╔══██╗██║██╔════╝██╔════╝
+██╔████╔██║█████╗██║   ██║██║   ██║█████╗  ██████╔╝██║█████╗  ███████╗
+██║╚██╔╝██║╚════╝██║▄▄ ██║██║   ██║██╔══╝  ██╔══██╗██║██╔══╝  ╚════██║
+██║ ╚═╝ ██║      ╚██████╔╝╚██████╔╝███████╗██║  ██║██║███████╗███████║
+╚═╝     ╚═╝       ╚══▀▀═╝  ╚═════╝ ╚══════╝╚═╝  ╚═╝╚═╝╚══════╝╚══════╝
 */
 
 	@media (min-width: 320px) { 
