--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -10,16 +10,23 @@
 ╚═╝  ╚═══╝ ╚═════╝ ╚══════╝ ╚═════╝    ╚═╝   ╚═╝  ╚═╝ ╚═════╝ ╚══════╝
 */
 
-/*
- +-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
- |S|e|c|c|i|o|n| |n|o|s|o|t|r|o|s|
- +-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
-*/
+	/*
+	 +-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
+	 |S|e|c|c|i|o|n| |n|o|s|o|t|r|o|s|
+	 +-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+
+	*/
 
 	.nosotros{
+		padding: 0% 6% !important; 
+		margin-top: 150px;
 		background-color: white;
 		font-family: 'Raleway', sans-serif;
 	}
+
+	.nosotros a{
+		height: 100%;
+	}
+
 
 	.nosotros .title{
 		font-weight: 800;
@@ -41,11 +48,18 @@
 	  	border: 2px solid #222222;
 	  	transition: all 0.9s ease-in-out 0s;
 	}
-/*
- +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
- |S|e|c|c|i|o|n| |m|i|s|i|o|n|
- +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
-*/
+
+	/*
+	 +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
+	 |S|e|c|c|i|o|n| |m|i|s|i|o|n|
+	 +-+-+-+-+-+-+-+ +-+-+-+-+-+-+
+	*/
+
+	#us-mision{
+		position: relative; 
+		padding: 0% 6% !important; 
+		margin-top: 5%;
+	}
 
 	#us-mision div{
 		background-color: #eee;
@@ -72,11 +86,79 @@
 		font-size: 1.4em;
 		text-align: justify;
 	}
-/*
- +-+-+-+-+-+-+-+-+
- |I|m|a|g|e|n|e|s|
- +-+-+-+-+-+-+-+-+
-*/
+
+	/*
+	 +-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+-+
+	 |S|e|c|c|i|o|n| |P|o|l|i|t|i|c|a|s|
+	 +-+-+-+-+-+-+-+ +-+-+-+-+-+-+-+-+-+
+	*/
+
+	#us-politicas{
+		position: relative; 
+		padding: 0% 6% !important; 
+		margin-top: 5%;
+		background-color: white;
+		font-family: 'Raleway', sans-serif;
+	}
+
+	#us-politicas .title{
+		font-weight: 600;
+		text-align: left;
+		font-size: 2.5em;
+		margin-top: 5%;
+	}
+
+	#us-politicas .title2{
+		font-weight: 600;
+		text-align: left;
+		font-size: 1.9em;
+		margin-top: 5%;
+	}
+
+	#us-politicas .paragraph{
+		font-weight: 300;
+		font-size: 1.4em;
+		text-align: justify;
+	}
+
+	#us-politicas hr {
+	  	display: block;
+	  	width: 10%;
+	  	margin: 1em 0;
+	  	border: 2px solid #222222;
+	  	transition: all 0.9s ease-in-out 0s;
+	}
+
+	.square{
+	    counter-reset: list-counter;
+	    list-style: none;
+	    float:left;
+	}
+	.square li{
+	    margin: 1.5em 0;    
+	}
+	.square li:before{
+	    content: counter(list-counter);
+	    counter-increment: list-counter;
+	    width: 2em;
+	    height: 2em;
+	    padding: 1em;
+	    margin-right: 1em;
+	    border: .25em solid #ccc;
+	    background: #000;
+	    color: #fff;
+	    font-family: arial;
+	    font-weight: bold;
+	    text-align: center;
+	    display: inline-block;
+	    
+	}
+
+	/*
+	 +-+-+-+-+-+-+-+-+
+	 |I|m|a|g|e|n|e|s|
+	 +-+-+-+-+-+-+-+-+
+	*/
 	.nosotros-img1{
 		background-color: white;  
 		background-image: url('https://s3.amazonaws.com/cannedhead.smartbrix/nosotros/nosotros1.png'); 
@@ -101,7 +183,7 @@
 
 	.nosotros-img3{
 		background-color: white;  
-		background-image: url('https://s3.amazonaws.com/cannedhead.smartbrix/nosotros/nosotros3.png'); 
+		background-image: url('https://s3.amazonaws.com/cannedhead.smartbrix/nosotros/nosotros3.png') !important; 
 		transition: all 2s ease-in-out;
 	}
 
@@ -121,64 +203,51 @@
 */
 
 	@media (min-width: 320px) { 
-		.nosotros{
-			height: 30vh; 
-			padding: 0% 6% !important; 
-			margin-top: 150px;
-		}
-
-		.nosotros a{
-			height: 100%;
-		}
 
 		.nosotros-img1{
-			height: 100%;
+			height: 200px;
 			background-size: 110% auto;
 		}
 
 		.nosotros-img2{
-			height: 80%;
+			height: 150px;
 			background-size: 110% auto;
 		}
 
-		#us-mision{
-			height: 100%;
-			position: relative; 
-			padding: 0% 6% !important; 
-			margin-top: 850px;
+		.nosotros-img3{
+			height: 129px;
+			background-size: 110% auto;
 		}
 
 	}
 
 	@media (min-width: 480px) { 
-		.nosotros{
-			height: 40vh; 
-		}
-
 	}
 
 	@media (min-width: 520px) { 
-		.nosotros{
-			height: 60vh; 
+		.nosotros-img1{
+			height: 255px;
+			background-size: 110% auto;
+		}
+
+		.nosotros-img2{
+			height: 250px;
+			background-size: 110% auto;
+		}
+
+		.nosotros-img3{
+			height: 225px;
+			background-size: 110% auto;
 		}
 	}
 
 	@media (min-width: 768px) { 
-		.nosotros-img1{
-			height: 100%;
-			background-size: 125% auto;
-		}
-		.nosotros{
-			height: 75vh; 
-		}
+
 	}
 
 	@media (min-width: 992px) { 
 	}
 
 	@media (min-width: 1200px) { 
-		.nosotros-img1{
-			height: 100%;
-			background-size: 125% auto;
-		}
+
 	} 
