--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,16 @@ html,body{
      opacity:1;
      transition: all ease 2seg;
 }
+
+.va{
+	/*center vertical*/
+			position: relative;
+		  	top: 50%;
+		  	transform: translateY(-50%);
+		  	-webkit-transform: translateY(-50%);
+		 	-ms-transform: translateY(-50%);
+		}
+}
 /*
  ██████╗ ██████╗ ███╗   ██╗████████╗ █████╗  ██████╗████████╗    
 ██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝██╔══██╗██╔════╝╚══██╔══╝    
@@ -151,7 +161,7 @@ html,body{
 ╚═╝     ╚═╝╚══════╝╚═╝  ╚═══╝ ╚═════╝ 
 */
 	.social-div-smart{
-		  height: 80px;
+		  height: 70px;
 		width: 60px; 	
 		color: #fff; 
 		background-color: #3B3B3A;  
@@ -271,7 +281,7 @@ html,body{
 	}
 
 	.social-row{
-		width: 167px;
+		width: 235px;
 	}
 
 	.menu-wrap a {
@@ -651,6 +661,30 @@ html,body{
 		-ms-transform: translateY(-50%);
 
 	}
+
+	.social-div-mobile-instagram{
+	  float:left;
+	  height: 49px;
+	  color: #fff;
+	  background-color:#B0B0B0; 
+	  text-align: center;
+	  font-size: 1.3em;
+	  /* padding: 22% 0%; */
+	  
+	  margin: 0% 2%; 
+	  width: 49px;
+
+	}
+
+	.social-div-mobile-instagram i{
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+
+	}
+
 
 	.social-div-mobile-plus{
 	  float:left;
@@ -1422,12 +1456,13 @@ html,body{
 	#footer{
 		background-color: white; 
 		color: #333; 
+		padding: 5% 5% !important;
 	}
 
 	#footer hr{
-		margin-top: -1%; 
-		width: 15%; 
-		border-top: solid 3px #fff;
+		float: left;
+		width: 100%; 
+		border-top: solid 1px #D4D4D4;
 	}
 	#footer h4{
 		color: #fff; 
@@ -1560,6 +1595,16 @@ html,body{
 
 		}
 
+		.tel i{
+			/*center vertical*/
+			position: relative;
+		  	top: 41%;
+		  	transform: translateY(-50%);
+		  	-webkit-transform: translateY(-50%);
+		 	-ms-transform: translateY(-50%);
+		}
+		}
+
 
 		.telefonos{
 			float: left;
@@ -1584,7 +1629,7 @@ html,body{
 
 		.call-2-action{
 			position: fixed;
-			height: 60px;
+			height: 50px;
 			width: 100% ; 
 			background-color: #8EBC2A;
 			top: 70px;
@@ -1866,7 +1911,15 @@ html,body{
 			font-size: 0.9em; 
 		}
 		.vid{
-			margin-top: 8%; 
+			margin-top: 2%; 
+			height: 80% !important;
+		}
+		.fluidvids-item {
+		    position: absolute;
+		    top: 0px;
+		    left: 0px;
+		    width: 100%;
+		    height: 100% !important;
 		}
 		.footer-c1{
 			display: none;
@@ -3132,7 +3185,8 @@ html,body{
 
 
 		.footer-c1{
-			text-align: center;
+			text-align: left;
+			margin-top: 0%;
 		}
 
 		.footer-c1 hr{
@@ -3227,17 +3281,31 @@ html,body{
 		.navbar-smart{
 			display: block !important;
 		}
+
+		.navbar-smart-mobile{
+			display: none !important;
+		}
 		.call-2-action {
 		  height: 50px;
 		  width: 25%;
 		  right: 0;
-		  top: 80px; 
+		  top: 70px; 
 
 		}
 		.tel{
 			height: 50px; 
 		}
 
+		.iso-menu img{
+			width: 54px;
+		}
+
+		.iso-menu h5{
+			text-align: center;
+    		margin-top: 0px;
+    		color: white;
+    		font-size: 10px !important;
+		}
 		.logo {
 		  margin-top: 6%;
 		  width: 17%;
@@ -3433,7 +3501,15 @@ html,body{
 		  text-align: left;
 		  font-size: 4em;
 		}
+		/*video*/
 
+		.fluidvids-item {
+		    position: absolute;
+		    top: 0px;
+		    left: 0px;
+		    width: 100%;
+		    height: 83% !important;
+		}
 		.footer-c1{
 			display: block;
 		}
@@ -3443,10 +3519,15 @@ html,body{
 		}
 
 		.logo-foot{
-			width: 20%;
+			width: 80%;
 			margin-bottom: 5%;
 			margin-top: 5%;
 		}
+
+		.footer-c4 {
+		  margin-top: 0% !important;
+		}
+
 
 		.footer-c4 h5 {
 		  font-size: 1.2em;
@@ -3511,7 +3592,7 @@ html,body{
 		}
 		
 		.navbar-smart{
-			height: 80px; 
+			height: 70px; 
 			background-color:#222; 
 			position: fixed !important;
 			z-index: 2000; 
@@ -3526,7 +3607,7 @@ html,body{
 			text-align: center;
 		}
 		.logo-anim a img {
-			width: 130px; 
+			width: 100px; 
 
 			/*center vertical*/
 			position: relative;
@@ -3573,6 +3654,10 @@ html,body{
 		  padding: 0px 5px;
 		  transition: all 0.4s ease-in-out;
 	}
+	.h5-social{
+		padding: 0% !important;
+	}
+}
 
 	@media (min-width: 1680px) {
 
